# mzlib

./: .gitignore  CMakeLists.txt  conandata.yml  main.cpp  options.h  readme.md  tests.cpp
doc/: universe.dia
include/: aggregated_file_monitor.h  binary_options.h  body.h  c64_basic_for.h  consts.h  cpucycle.h  dbl.h  direction.h  enums.h  exceptions.h  genetic.h  image_texture.h  killer_sudoku.h  laws.h  markov_chain.h  mass_centre.h  optional.h  pointer_wrapper.h  probabilator.h  quadtree.h  quadtree_it_bodies.h  quadtree_it_breadthfirst.h  quadtree_it_masscentres.h  quadtree_it_postorder.h  quadtree_node.h  rectangle.h  relentless_file_reader.h  screen_rectangle.h  sentence_o_matic.h  space.h  stopwatch.h  sudoku.h  supersafe_number.h  twoway_streambuf.h  unique.h  units.h  units_foundation.h  units_strong.h  universe.h  universe_containers.h  (+7 more)
include/abstract/: direction.h  genetic.h  genetic_base.h  genetic_container.cpp  genetic_container.h  genetic_object.cpp  genetic_object.h  markov_chain.cpp  markov_chain.h  probabilator.cpp  probabilator.h  quadtree.h  quadtree_it_bodies.h  quadtree_it_masscentres.cpp  quadtree_it_masscentres.h  quadtree_node.h  symbol_sequences_in_pattern.cpp  symbol_sequences_in_pattern.h  translate_to_direction.h  unique.cpp  unique.h
include/apps/: aggregated_file_monitor.cpp  aggregated_file_monitor.h  filter_haikus.cpp  filter_haikus.h  killer_sudoku.cpp  killer_sudoku.h  necklace_splitting.cpp  necklace_splitting.h  sentence_o_matic.cpp  sentence_o_matic.h  sentence_o_matic_from_file.h  sudoku.cpp  sudoku.h  syllables.cpp  syllables.h
include/extension/: libxmlpp.cpp  libxmlpp.h  libxmlpp_datashelf.cpp  libxmlpp_datashelf.h  sdl_exceptions.h  sdl_image_texture.cpp  sdl_image_texture.h
include/filesystem/: extract_filename.cpp  extract_filename.h  filenamearise.cpp  filenamearise.h  filesystem_proxy.h  find_eof_position.cpp  find_eof_position.h  is_meta_directory.cpp  is_meta_directory.h  list_files.cpp  list_files.h  read_write_file.cpp  read_write_file.h
include/greatest_hits/: genetic_base.cpp  genetic_base.h  genetic_container.h  genetic_object.h  graph.h  graph_edge.h  graph_operations.h  longest_common_subsequence.cpp  longest_common_subsequence.h  markov_chain.cpp  markov_chain.h  median_maintenance.cpp  median_maintenance.h  next_lex_permutation.h  quadtree.h  quadtree_it_bodies.cpp  quadtree_it_bodies.h  quadtree_it_masscentres.h  quadtree_node.h  travelling_salesman_problem.cpp  travelling_salesman_problem.h  wagner_fischer_distance.cpp  wagner_fischer_distance.h
include/grid/: all.h  apply_drawing.cpp  apply_drawing.h  are_touching.cpp  are_touching.h  check_for_drawing.cpp  check_for_drawing.h  convert_to_grid.cpp  convert_to_grid.h  drawing_operation.h  exists_in.cpp  exists_in.h  fits_on_grid.cpp  fits_on_grid.h  get_all_cells.h  get_all_cells_with_value.h  get_direction_cartesian.cpp  get_direction_cartesian.h  get_neighbour_cells.h  grid.cpp  grid.h  is_in.h  manhattan_distance.h  move_cartesian.cpp  move_cartesian.h  move_drawing.h  move_screen.cpp  move_screen.h  move_to_next_cell.cpp  move_to_next_cell.h  move_unless.cpp  move_unless.h  set_all_to.h  shortest_path_bfs.cpp  shortest_path_bfs.h
include/interval/: get_extremes.cpp  get_extremes.h  is_in.cpp  is_in.h  orient.h  overlap.cpp  overlap.h
include/iterators/: average.cpp  average.h  circular_next.cpp  circular_next.h  conditional_find.cpp  conditional_find.h  contains_range.cpp  contains_range.h  copy.cpp  copy.h  copy_modify.h  (+44 more)
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
tests/: alice.txt  farage.txt  matrix_operations_performance.cpp  std_maps_performance.cpp  test_dbl.cpp  test_genetic.cpp  test_genetic_container.cpp  test_genetic_object.cpp  test_image_texture.cpp  test_law_screen_rectangle.cpp  test_laws.cpp  test_markov_chain.cpp  test_masscentre.cpp  test_probabilator.cpp  test_quadtree.cpp  test_rectangle.cpp  test_relentless_file_reader.cpp  test_repeated_ranges_performance.cpp  test_sentence_o_matic.cpp  test_space.cpp  test_sudoku.cpp  test_supersafe_number.cpp  test_tools.cpp  test_tools_filesystem.cpp  test_tools_genetic.cpp  test_tools_random.cpp  test_tools_string.cpp  test_twoway_streambuf.cpp  test_unique.cpp  test_units.cpp  test_units_strong.cpp  test_universe.cpp  test_universe_performance.cpp  test_utilities.cpp  test_utils_filesystem.cpp  test_utils_random.cpp  test_utils_string.cpp  test_vector.cpp
(+352 files in other folders)
